  * Allow customization of the insertion of the search text in tweets: never, prepended, or appended (set on a per-search basis). Default is never.
  * Show rate limit status as the topic for chats and timeline(s)
  * Makefile changes, added support for localization. So far, just Spanish has been added.

Changelog for 0.6.3:
  * Fix make install target

Changelog for 0.6.2:
  * Add a "report spammer" link
  * Initial "Conversation" support available. Click on "In reply to..." and the parent tweet will be retrieve. It's currently delivered just like any other tweet; if it's from an IM session, it will be shown in a new IM window; if it's from a chat window, it will be shown at the bottom. I don't like this, but I don't have anything better at the moment.
  * More sensible login defaults; HTTPS, OAuth, password is optional (not required when using OAuth)
  * Snowflake API update; don't assume tweet_id's are sequential. This could have resulted in missing some tweets.
  * Fix the Makefile.mingw dependency bug where foo.dll wasn't being rebuilt. Note that there is no support for header dependencies; the pidgin makefiles, which we use, do not support them. If you change a head files, run make clean all
  * Automatically re-connect on server issues. 

Changelog for 0.6.1:
  * 64 bit installations now work. Use the regular build system
  * Proper build system. For Linux, run ./autogen.sh && make && make sudo install . Everything should "just work". For MinGW, run make -f Makefile.mingw PIDGIN_TREE_TOP=/path/to/pidgin-2.7.x/ VERSION=whatever. Note that I've only tested MinGW on Linux; Cygwin feedback is welcome.
  * Cleaned up a bunch of code warnings. No functional changes (hopefully) 

Changelog for 0.6.0: