@@ -241,6 +241,14 @@ gint twitter_option_home_timeline_max_tweets(PurpleAccount *account)
 			TWITTER_PREF_HOME_TIMELINE_MAX_TWEETS,
 			TWITTER_PREF_HOME_TIMELINE_MAX_TWEETS_DEFAULT);
 }
+
+gint twitter_option_list_max_tweets(PurpleAccount *account)
+{
+	return purple_account_get_int(account,
+			TWITTER_PREF_LIST_MAX_TWEETS,
+			TWITTER_PREF_LIST_MAX_TWEETS_DEFAULT);
+}
+
 gboolean twitter_option_default_dm(PurpleAccount *account)
 {
 	return purple_account_get_bool(account,
